# gtksum

./: CMakeLists.txt  README.md
src/: FSExplorer.cpp  FSExplorer.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
ui/: MainWindow.glade
